--- a/views/flash_messages.ejs
+++ b/views/flash_messages.ejs
@@ -15,7 +15,7 @@
 <% } %>
 
 <!-- jQuery -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="/javascripts/jquery.min.js"></script>
 
 <script>
   // Alert message auto-close
