--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,23 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Login authentication with Express, MySQL and Passport"
+      content="Authentication with Express, MySQL and Passport"
     />
     <meta name="author" content="ReuelO" />
     <title>Login</title>
 
     <!-- Bootstrap -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css"
-    />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css" />
+    <script src="/javascripts/bootstrap.bundle.min.js"></script>
 
     <!-- FontAwesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
+    <link rel="stylesheet" href="/stylesheets/all.min.css" />
 
     <!-- Favicons -->
     <!-- <link rel="icon" href="/images/favicon.ico" /> -->
