--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,43 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Authentication with Express, MySQL and Passport"
-    />
-    <meta name="author" content="ReuelO" />
-    <title>Login</title>
-
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css" />
-    <script src="/javascripts/bootstrap.bundle.min.js"></script>
-
-    <!-- FontAwesome -->
-    <link rel="stylesheet" href="/stylesheets/all.min.css" />
-
-    <!-- Favicons -->
-    <!-- <link rel="icon" href="/images/favicon.ico" /> -->
-
-    <link rel="stylesheet" href="/stylesheets/style.css" />
-  </head>
+  <%- include ./partials/header %>
 
   <body class="d-flex h-100 text-center text-white bg-dark">
-    <div class="d-flex w-100 h-100 py-2 px-5 mx-auto flex-column">
-      <header class="mb-auto">
-        <div>
-          <h3 class="float-md-start mb-0">EMP Auth</h3>
-          <nav class="nav nav-masthead justify-content-center float-md-end">
-            <a class="nav-link" href="/">Home</a>
-            <a class="nav-link" href="/register">Register</a>
-            <a class="nav-link active" aria-current="page" href="/login"
-              >Login</a
-            >
-          </nav>
-        </div>
-      </header>
+    <div class="d-flex w-100 h-100 mx-auto flex-column">
+      <%- include ./partials/navbar %>
 
       <main class="p-0">
         <div
@@ -48,7 +15,7 @@
             <i class="fa fa-user-check"></i> <%= heading %>
           </h3>
 
-          <%- include ./flash_messages %>
+          <%- include ./partials/flash_messages %>
 
           <form class="form text-start" action="/login" method="POST">
             <div class="col-md mb-3">
@@ -93,25 +60,7 @@
         </div>
       </main>
 
-      <footer class="mt-auto text-white-50 bg-dark">
-        <p class="mb-1">Developed by <b>ReuelO</b></p>
-        <p>
-          <a
-            class="btn btn-sm btn-outline-light"
-            href="https://github.com/ReuelO"
-            target="_blank"
-          >
-            GitHub
-          </a>
-          <a
-            class="btn btn-sm btn-outline-light"
-            href="https://twitter.com/OmwengaReuel"
-            target="_blank"
-          >
-            Twitter
-          </a>
-        </p>
-      </footer>
+      <%- include ./partials/footer %>
     </div>
   </body>
 </html>
