--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,48 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Authentication with Express, MySQL and Passport"
-    />
-    <meta name="author" content="ReuelO" />
-    <title>Dashboard</title>
-
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css" />
-    <script src="/javascripts/bootstrap.bundle.min.js"></script>
-
-    <!-- FontAwesome -->
-    <link rel="stylesheet" href="/stylesheets/all.min.css" />
-
-    <!-- Favicons -->
-    <!-- <link rel="icon" href="/images/favicon.ico" /> -->
-
-    <link rel="stylesheet" href="/stylesheets/style.css" />
-  </head>
+  <%- include ../partials/header %>
 
   <body class="d-flex h-100 text-center text-white bg-dark">
     <div class="d-flex w-100 h-100 py-2 px-5 mx-auto flex-column">
-      <header class="mb-auto">
-        <div>
-          <h3 class="float-md-start mb-0">EMP Auth</h3>
-          <nav class="nav nav-masthead justify-content-center float-md-end">
-            <a
-              class="nav-link active"
-              aria-current="page"
-              href="/users/<%= user.id %>"
-              >Dashboard</a
-            >
-            <a class="nav-link" href="/users/<%= user.id %>/profile">Profile</a>
-            <a class="nav-link text-danger" href="/logout">Logout</a>
-          </nav>
-        </div>
-      </header>
-
-      <%- include ../flash_messages %>
+      <%- include ./partials/navbar %>
 
       <main class="p-0">
         <h1>EMP Auth</h1>
@@ -51,43 +13,42 @@
         </p>
         <hr class="my-3" />
 
-        <div class="card bg-white text-dark text-start m-3">
+        <%- include ../partials/flash_messages %>
+
+        <div class="card bg-dark text-white text-start m-3 rounded shadow-lg">
           <div class="card-body p-5">
-            <h5 class="card-title">User Details</h5>
+            <h3 class="card-title">User Details</h3>
             <% data.forEach(function(one){ %>
-            <p class="card-text">
-              User ID: <b><%= one.id %></b> <br />
-              Username: <b><%= one.username %></b>
+            <p class="card-text lead">
+              ID: <b><%= one.user_id %></b> <br />
+              Name: <% if(one.name){ %>
+              <b><%= one.name %></b>
+              <% } else { %>
+              <u>null</u>
+              <% } %> <br />
+              Username: <b><%= one.username %></b> <br />
+              Email: <% if(one.email){ %>
+              <b><%= one.email %></b>
+              <% } else { %>
+              <u>null</u>
+              <% } %> <br />
+              Phone: <% if(one.phone){ %>
+              <b><%= one.phone %></b>
+              <% } else { %>
+              <u>null</u>
+              <% } %> <br />
             </p>
             <% }); %>
             <a
-              href="/users/<%= user.id %>/profile"
-              class="btn btn-outline-dark fw-bold border-dark"
+              href="/users/<%= user.user_id %>/profile"
+              class="btn btn-outline-light fw-bold border-light"
               >View Profile</a
             >
           </div>
         </div>
       </main>
 
-      <footer class="mt-auto text-white-50 bg-dark">
-        <p class="mb-1">Developed by <b>ReuelO</b></p>
-        <p>
-          <a
-            class="btn btn-sm btn-outline-light"
-            href="https://github.com/ReuelO"
-            target="_blank"
-          >
-            GitHub
-          </a>
-          <a
-            class="btn btn-sm btn-outline-light"
-            href="https://twitter.com/OmwengaReuel"
-            target="_blank"
-          >
-            Twitter
-          </a>
-        </p>
-      </footer>
+      <%- include ../partials/footer %>
     </div>
   </body>
 </html>
