--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -1,73 +1,73 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Authentication with Express, MySQL and Passport"
-    />
-    <meta name="author" content="ReuelO" />
-    <title>Profile</title>
-
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css" />
-    <script src="/javascripts/bootstrap.bundle.min.js"></script>
-
-    <!-- FontAwesome -->
-    <link rel="stylesheet" href="/stylesheets/all.min.css" />
-
-    <!-- Favicons -->
-    <!-- <link rel="icon" href="/images/favicon.ico" /> -->
-
-    <link rel="stylesheet" href="/stylesheets/style.css" />
-  </head>
+  <%- include ../partials/header %>
 
   <body class="d-flex h-100 text-center text-white bg-dark">
     <div class="d-flex w-100 h-100 py-2 px-5 mx-auto flex-column">
-      <header class="mb-auto">
-        <div>
-          <h3 class="float-md-start mb-0">EMP Auth</h3>
-          <nav class="nav nav-masthead justify-content-center float-md-end">
-            <a class="nav-link" href="/users/<%= user.id %>">Dashboard</a>
-            <a
-              class="nav-link active"
-              aria-current="page"
-              href="/users/<%= user.id %>/profile"
-              >Profile</a
-            >
-            <a class="nav-link text-danger" href="/logout">Logout</a>
-          </nav>
-        </div>
-      </header>
+      <%- include ./partials/navbar %>
 
       <main class="p-0">
         <div
           class="container-fluid p-5 border border-2 border-light"
-          style="max-width: 400px"
+          style="max-width: 800px"
         >
           <h3 class="text-center text-white p-4">
             <i class="fa fa-user-check"></i> <%= heading %>
           </h3>
 
-          <%- include ../flash_messages %> <% data.forEach(function(one){ %>
+          <%- include ../partials/flash_messages %> <%
+          data.forEach(function(one){ %>
           <form
             class="form text-start"
-            action="/users/<%= user.id %>/profile"
+            action="/users/<%= user.user_id %>/profile"
             method="POST"
             oninput='confirm.setCustomValidity(confirm.value != password.value ? "Passwords do not match." : "")'
           >
-            <div class="col-md mb-3">
-              <label for="username">Username</label>
-              <input
-                type="text"
-                class="form-control"
-                name="username"
-                value="<%= one.username %>"
-                autofocus
-                required
-              />
+            <div class="row">
+              <div class="col-md mb-3">
+                <label for="name">Name</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  name="name"
+                  id="name"
+                  value="<%= one.name %>"
+                  autofocus
+                  required
+                />
+              </div>
+              <div class="col-md mb-3">
+                <label for="username">Username</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  name="username"
+                  value="<%= one.username %>"
+                  required
+                />
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md mb-3">
+                <label for="email">Email Address</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  name="email"
+                  id="email"
+                  value="<%= one.email %>"
+                />
+              </div>
+              <div class="col-md mb-3">
+                <label for="phone">Phone Number</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  name="phone"
+                  id="phone"
+                  value="<%= one.phone %>"
+                />
+              </div>
             </div>
             <div class="col-md mb-3">
               <button type="button" class="btn btn-danger" id="change">
@@ -102,25 +102,7 @@
         </div>
       </main>
 
-      <footer class="mt-auto text-white-50 bg-dark">
-        <p class="mb-1">Developed by <b>ReuelO</b></p>
-        <p>
-          <a
-            class="btn btn-sm btn-outline-light"
-            href="https://github.com/ReuelO"
-            target="_blank"
-          >
-            GitHub
-          </a>
-          <a
-            class="btn btn-sm btn-outline-light"
-            href="https://twitter.com/OmwengaReuel"
-            target="_blank"
-          >
-            Twitter
-          </a>
-        </p>
-      </footer>
+      <%- include ../partials/footer %>
     </div>
   </body>
 </html>
